The implicit aspect-ratio from width and height attributes with float value is not accurate enough https://bugs.webkit.org/show_bug.cgi?id=224664

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

The aspect ratio test case with width "0.8" and height "0.2" in img-aspect-ratio.html has passed. This patch doesn't change the behavior of
the original aspect ratio test case(`assert_ratio(images[5], 133/106)`) which is related to bug 206161.

* web-platform-tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/img-aspect-ratio-expected.txt:

Source/WebCore:

The width and height attributes should impact the aspect ratio only not the intrinsic size which should be from the content.
Since computeAspectRatioInformationForRenderBox doesn't change the intrinsic size now, so we can remove it from computePreferredLogicalWidths.

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeIntrinsicRatioInformation const): Width and height attributes change intrinsicRatio only, not intrinsicSize.
(WebCore::RenderReplaced::computePreferredLogicalWidths): computeAspectRatioInformationForRenderBox doesn't change intrinsicSize now, so we can remove this.


Canonical link: https://commits.webkit.org/236710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276228 268f45cc-cd09-0410-ab3c-d52691b4dbfc